--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/node": "^12.19.8",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "enzyme": "^3.11.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "jest-junit": "^12.0.0",
@@ -55,8 +56,25 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
+  },
+    "jest": {
+    "coverageReporters": [
+      "text",
+      "cobertura",
+      "json",
+      "lcov",
+      "clover"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/index.ts",
+      "!src/react-app-env.d.ts",
+      "!src/**/*.stories.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/"
+    ]
   }
 }
