--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "enzyme": "^3.11.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
+    "git-cz": "^4.7.6",
     "jest-junit": "^12.0.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
