--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-scripts": "4.0.1",
     "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.2",
+    "standard-version": "^9.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
