--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {},
+  "author": {
+    "name": "Esteban Dworak",
+    "email": "esteban.cervantes@resser.com"
+  },
+  "license": "UNLICENSED",
+  "repository": {
+    "type": "git",
+    "url": "https://resser.visualstudio.com/ResserOS/_git/react-library-template"
+  },
   "scripts": {
     "start:dev": "start-storybook -p 6006",
     "doc:dev": "start-storybook -p 6006",
@@ -21,6 +30,11 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "browserslist": {
     "production": [
@@ -52,6 +66,7 @@
     "eslint": "^7.15.0",
     "eslint-config-airbnb-typescript-prettier": "^4.1.0",
     "git-cz": "^4.7.6",
+    "husky": "^4.3.5",
     "jest-junit": "^12.0.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
