--- a/src/templates/react-component-library/package.json
+++ b/src/templates/react-component-library/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-component-library",
+  "name": "<%= projectName %>",
   "version": "0.1.0",
   "private": true,
   "dependencies": {},
