--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
-registry=https://resser.pkgs.visualstudio.com/resser-web-os/_packaging/resser-react/npm/registry/ 
+registry=https://registry.npmjs.org/
+@resser:registry=https://resser.pkgs.visualstudio.com/resser-web-os/_packaging/resser-react/npm/registry/ 
                         
 always-auth=true
