--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"name": "@resser/create-component-library",
+  "name": "@resser/create-component-library",
   "version": "3.0.0",
   "description": "",
   "main": "index.js",
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/EstebanDworak/react-component-library#readme",
   "devDependencies": {
+    "@types/ascii-art": "^1.4.0",
     "@types/ejs": "^3.0.5",
     "@types/inquirer": "^7.3.1",
     "@types/node": "^14.14.11",
@@ -30,8 +31,12 @@
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "ascii-art": "^2.5.0",
+    "azure-devops-node-api": "^10.1.2",
+    "console-clear": "^1.1.1",
     "ejs": "^3.1.5",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "shelljs-plugin-clear": "^0.2.0"
   },
   "bin": {
     "template-generator": "./dist/index.js"
