--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "azure-devops-node-api": "^10.1.2",
     "console-clear": "^1.1.1",
     "ejs": "^3.1.5",
-    "inquirer": "^7.3.3",
+    "inquirer": "^7.3.3"
   },
   "bin": {
     "resser-template-generator": "./dist/index.js"
