--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
+    "start:dev": "npm run build && npm start",
+    "nodemon": "nodemon -e ts  --exec \"npm run start:dev\"",
     "build": "rimraf ./dist && tsc && shx rm -rf dist/templates && shx cp -r src/templates dist"
   },
   "repository": {
@@ -26,19 +28,25 @@
     "@types/shelljs": "^0.8.8",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
+    "tsc-watch": "^4.2.9",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "asciiart-logo": "^0.2.6",
     "azure-devops-node-api": "^10.1.2",
     "chalk": "^4.1.0",
     "console-clear": "^1.1.1",
     "ejs": "^3.1.5",
     "inquirer": "^7.3.3",
+    "nodemon": "^2.0.6",
     "shelljs": "^0.8.4",
     "shx": "^0.3.3"
   },
   "pkg": {
     "assets": "dist/templates/**/*"
+  },
+  "nodemonConfig": {
+    "ignore": ["dist/**/*"]
   },
   "bin": {
     "resser-template-generator": "./dist/index.js"
